--- a/gateway/config/nginx.conf
+++ b/gateway/config/nginx.conf
@@ -187,7 +187,7 @@ http {
         ssl_session_timeout 10m;
         proxy_cookie_domain $server_name $host;
         proxy_cookie_path / "/; SameSite=None; Secure";
-
+    
         location / {
             proxy_pass http://frontend_service;
             proxy_set_header Host $host;
@@ -198,13 +198,36 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
         }
-
+    
+        location /media/ {
+            proxy_pass http://social_service/media/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    
         location /api/ {
             proxy_pass http://localhost:5090;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        
+            # Add CORS headers
+            add_header Access-Control-Allow-Origin https://localhost:5443;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
+            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+            add_header Access-Control-Allow-Credentials true;
+        
+            # Handle preflight requests
+            if ($request_method = OPTIONS) {
+                add_header Access-Control-Allow-Origin *;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
+                add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+                add_header Access-Control-Allow-Credentials true;
+                return 204;
+            }
         }
     }
 }
